<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment3"
        tools:context=".ThirdFragment">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ThirdActivity">

            <TextView
                android:id="@+id/ThirdActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_activity"
                app:layout_constraintBottom_toTopOf="@id/bnToFirst"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bnToFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_first_activity"
                app:layout_constraintBottom_toTopOf="@id/bnToSecond"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/bnToSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_second_activity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>