...

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment2"
        tools:context=".SecondFragment">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SecondActivity">
...

            <Button
                android:id="@+id/bnToFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_first_activity"
                app:layout_constraintBottom_toTopOf="@id/bnToThird"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/bnToThird"
                android:layout_width="wrap_content"
...
